--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ r2d2 = { version = "0.8.8", optional = true }
 # Only needed for cluster
 crc16 = { version = "0.4.0", optional = true }
 rand = { version = "0.7.0", optional = true }
+async-std = "1.4.0"
+futures = "0.3.2"
 
 [features]
 default = ["geospatial", "aio", "script"]
