--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ r2d2 = { version = "0.8.8", optional = true }
 crc16 = { version = "0.4.0", optional = true }
 rand = { version = "0.7.0", optional = true }
 async-std = { version = "1.4.0", optional = true }
+async-trait = "0.1.24"
 
 [features]
 default = ["geospatial", "aio", "script"]
