--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,8 @@ r2d2 = { version = "0.8.8", optional = true }
 # Only needed for cluster
 crc16 = { version = "0.4.0", optional = true }
 rand = { version = "0.7.0", optional = true }
-async-std = { version = "1.4.0", optional = true }
+# Only needed for async_std support
+async-std-dep = { version = "1.5.0", optional = true, package = "async-std" }
 async-trait = "0.1.24"
 
 [features]
@@ -55,7 +56,7 @@ tokio-rt-core = ["aio", "tokio/rt-core"]
 geospatial = []
 cluster = ["crc16", "rand"]
 script = ["sha1"]
-async-std-aio = ["aio"]
+async-std = ["aio"]
 
 [dev-dependencies]
 rand = "0.7"
@@ -75,7 +76,7 @@ required-features = ["tokio-rt-core"]
 
 [[test]]
 name = "test_async_async_std"
-required-features = ["async-std-aio"]
+required-features = ["async-std"]
 
 [[test]]
 name = "parser"
