--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,17 +46,18 @@ r2d2 = { version = "0.8.8", optional = true }
 crc16 = { version = "0.4.0", optional = true }
 rand = { version = "0.7.0", optional = true }
 # Only needed for async_std support
-async-std-dep = { version = "1.5.0", optional = true, package = "async-std" }
+async-std = { version = "1.5.0", optional = true}
 async-trait = "0.1.24"
 
 [features]
-default = ["geospatial", "aio", "script"]
+default = ["geospatial", "tokio-comp", "script"]
 aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/sink", "tokio/sync", "tokio/stream", "tokio/tcp", "tokio/uds", "tokio/io-util", "tokio-util", "tokio-util/codec", "combine/tokio-02"]
 tokio-rt-core = ["aio", "tokio/rt-core"]
 geospatial = []
 cluster = ["crc16", "rand"]
 script = ["sha1"]
-async-std = ["aio"]
+async-std-comp = ["aio", "async-std"]
+tokio-comp = ["aio", "tokio"]
 
 [dev-dependencies]
 rand = "0.7"
