--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ async-std = { version = "1.5.0", optional = true}
 async-trait = "0.1.24"
 
 [features]
-default = ["geospatial", "tokio-comp", "script"]
+default = ["geospatial", "tokio-comp", "async-std-comp", "script"]
 aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/sink", "tokio/sync", "tokio/stream", "tokio/tcp", "tokio/uds", "tokio/io-util", "tokio-util", "tokio-util/codec", "combine/tokio-02"]
 tokio-rt-core = ["aio", "tokio/rt-core"]
 geospatial = []
